@@ -2,6 +2,11 @@
 VERSION 0.8.1cvs
 ================
 
+2006-04-23  Vincent Richard  <vincent@vincent-richard.net>
+
+ * Added vmime::net::folder::destroy() to delete folders on IMAP and
+   maildir stores.
+
 2006-04-18  Vincent Richard  <vincent@vincent-richard.net>
 
  * Renamed 'byte' to 'byte_t' to fix compilation problems on Fedora
